# _codex_

./: .bandit.yml  .coveragerc  .dockerignore  .dvcignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .importlinter  .mypy-baseline.txt  .pre-commit-config.yaml  .pre-commit-config.yaml.bkup  .pre-commit-hybrid.yaml  .pre-commit-ruff.yaml  .pre-commit-ruff.yaml-needs-review-by-user  .secrets.baseline  AGENTS.md  AUDIT_PROMPT.md  CHANGELOG.md  CHANGELOG_CODEX.md  CHANGELOG_Codex.md  CHANGELOG_Codex.md.bkup  CHANGELOG_Codex.md00  CHANGELOG_Codex.md001  CHANGELOG_SESSION_LOGGING.md  CHANGELOG_codex.md  CODEBASE_AUDIT.md  CODEBASE_AUDIT_2025-08-26_203612.md  CODEBASE_AUDIT_2025-09-27_ITERATION3.md  CODE_STYLE_GUIDE.md  CONTRIBUTING.md  Codex_Questions.md  DEFERRED.md  Dockerfile  Dockerfile.gpu  ERROR_CAPTURE_BLOCKS.md  ERROR_LOG.md  GATES_REPORT.txt  LFS_POLICY.md  (+74 more)
.codex/: DO_NOT_ACTIVATE_ACTIONS.txt  DO_NOT_ACTIVATE_GITHUB_ACTIONS  README.md  action_log.ndjson  change_log-large.md  change_log.md  codex.env.json  codex_repo_scout.py  deferred_items.md  errors.ndjson  flags.env  flags.json  flags.yml  guardrails.md  inventory.json  inventory.md  inventory.ndjson  inventory.tsv  inventory.txt  lint-policy.json  mapping.json  mapping.md  mapping_table.json  mapping_table.md  results.md  ruff.json  run_db_utils_workflow.py  run_repo_scout.py  run_workflow.py  search_hits.json  smoke_checks.json  status.post.txt  status.pre.txt  status_scan.json
.copilot-space/: workflow.yaml
.github/: CODEOWNERS  Copilot.md  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  pull_request_template.md
LICENSES/: codex-universal-image-sbom.md  codex-universal-image-sbom.spdx.json
agents/codex_client/: README.md  pyproject.toml
agents/codex_client/codex_client/: __init__.py  bridge.py  config.py  demo_plan_and_call.py  models.py
agents/codex_client/tests/: test_config.py
analysis/: audit_pipeline.py  branch_0B_base_overview.md  commit_2d1469d_scope.md  intuitive_aptitude.py  metrics.py  parsers.py  providers.py  registry.py  tests_docs_links_audit.py
artifacts/: archive_plan_root.json
audit_artifacts/: capabilities_raw.json  capabilities_scored.json  context_index.json  facets.json  gaps.json
canvas_importer_packager/: IMPORT_ME.template.md  LICENSE  NO_BREVITY_POLICY.md  README.md  SECURITY.md  VERIFY_GUIDE.md  audit.sample.json  canvas_importer_packager.py  checksums.sample.csv  example_usage.py  manifest.project.sample.json  manifest.project.schema.json  manifest.sample.json  manifest.schema.json  packer.py  test_packer.py  test_verifier.py  verifier.py
codex/: chat.py
codex_addons/: spectral.py
codex_digest/: EXECUTION.md  README.md  __init__.py  cli.py  error_capture.py  mapper.py  pipeline.py  requirements.txt  semparser.py  tokenizer.py  utils.py  workflow.py
codex_ml/: __init__.py  __main__.py  _package_main.py  config.py  pipeline.py
codex_utils/: __init__.py  json_report.py  logging_setup.py  mlflow_offline.py  ndjson.py  regex_patterns.py  repro.py
conf/: config.yaml
configs/: base.yaml  base_config.py  config.yaml  default.yaml  defaults.yaml  deterministic.yaml  experiment.yaml  interfaces.example.yaml  interfaces.yaml  offline_baseline.yaml  train_tokenizer.yaml
data/: tiny_text_classification.tsv  zendesk_api_index.json  zendesk_docs_manifest.json
db/: schema.sql
deploy/: __init__.py  deploy_codex_pipeline.py
docs/: CHECKPOINTS.md  CLI.md  CONTRIBUTING.md  FollowUp_Implementation_Plan.md  Implementation_Update_merged.md  LOGGING.md  PR_PLAN.md  QUALITY_GATES.md  README.md  RELEASE_CHECKLIST.md  SEARCH_NOTES.md  SOP_CHATGPT_CODEX_PRS_LOCAL.md  Traversal_Workflow.md  Usage_Guide.md  api.md  api_catalog.md  architecture.md  checkpoint_integrity.md  checkpoint_schema_v2.md  ci.md  cli.md  concepts.md  data_determinism.md  deep_research_prompts.md  detectors.md  dev-notes.md  dynamical-system.md  ephemeral-runners.md  experiments.md  extensibility.md  gaps_report.md  getting-started.md  hydra_defaults_and_sweeps.md  hydra_quickstart.md  incident_runbook.md  index.md  integrity_and_uris.md  manifest_integrity.md  ndjson_summary.md  next_steps.md  (+32 more)
documentation/: TOOLS.md  checkpointing_README.md  codex_pipeline_scaffold.md  codex_setup_integration.md  codex_symbolic_pipeline.py  codex_symbolic_training_summary.md  continuous_improvement.md  deploy_codex_pipeline.md  end_to_end_logging.md  manual_verification_template.md  option_a_sqlite.md  option_b_duckdb_parquet.md  option_c_datasette_lite.md  safety_README.md  session_hooks_shell.md  session_log_rotation.md
examples/: TROUBLESHOOTING.md  __init__.py  chat_finetune.py  evaluate_toy.py  mlflow_offline.py  tokenize.py  train_toy.py
experiments/: 2025-01-15_smoke.md
hydra/: __init__.py  errors.py
interfaces/: tokenizer.py
mcp/: mcp.json
notebooks/: gpu_training_example.ipynb  quick_start.ipynb  quickstart.ipynb
nox_sessions/: fence_tests.py
omegaconf/: __init__.py
patches/: I2_Data_Spine_P2.1-P2.3.md  analysis.patch  analysis___init__.py.patch  analysis_audit_pipeline.py.patch  analysis_metrics.jsonl.patch  analysis_metrics.py.patch  analysis_parsers.py.patch  (+11 more)
services/ita/: .gitignore  README.md  openapi.yaml  pyproject.toml
services/ita/app/: __init__.py  git_ops.py  hygiene.py  knowledge_base.py  main.py  models.py  security.py  tests_runner.py
services/ita/scripts/: issue_api_key.py
services/ita/tests/: test_contract.py  test_endpoints.py
temp/bridge_codex_copilot_bridge/services/ita/: openapi.yaml  pyproject.toml
temp/bridge_codex_copilot_bridge/services/ita/app/: auth.py  main.py
temp/bridge_codex_copilot_bridge/services/ita/app/routers/: gitops.py  kb.py  repo.py  tests.py
temp/bridge_codex_copilot_bridge/services/ita/app/utils/: github_app.py  security.py
temp/bridge_codex_copilot_bridge/services/ita/scripts/: issue_api_key.py  run_dev.sh
temp/bridge_codex_copilot_bridge/services/ita/tests/: test_contract.py  test_endpoints.py
tests/plugins/_sandbox_pkg/: pyproject.toml
tests/plugins/_sandbox_pkg/codex_dummy_plugin/: __init__.py
(+2082 files in other folders)
