[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internal-tools-api"
version = "0.1.0"
description = "Internal Tools API that brokers operations between Codex and GitHub Copilot clients."
readme = "README.md"
authors = [{ name = "Codex Automation Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
